--- a/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -50,8 +50,9 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(m => m.Exclude, new { @class = "control-label" })
-                @Html.TextBoxFor(m => m.Exclude, new { @class = "form-control" })
+                <div class="checkbox">
+                    @Html.CheckBoxFor(m => m.Exclude) @Html.DisplayNameFor(m => m.Exclude)
+                </div>
             </div>
 
         </div>
