--- a/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -1,16 +1,17 @@
 ﻿@model Treehouse.FitnessFrog.Models.Entry
 @using Treehouse.FitnessFrog.Models
 
+
+
 @{
     ViewBag.Title = "Add Entry";
-
-
-    var selectListItems = SelectList(items, "Id", "Name");
 }
 
 
 
 <h2>@ViewBag.Title</h2>
+
+@Html.ValidationSummary("The following errors were found:", new { @class = "alert alert-danger" } )
 
 @using (Html.BeginForm())
 {
@@ -26,6 +27,7 @@
             <div class="form-group">
                 @Html.LabelFor(m => m.ActivityId, new { @class = "control-label" })
                 @Html.DropDownListFor(m => m.ActivityId, (SelectList)ViewBag.ActivitiesSelectListItems, "", new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.ActivityId)
             </div>
 
             <div class="form-group">
@@ -61,7 +63,7 @@
 
             <div class="form-group">
                 @Html.LabelFor(m => m.Notes, new { @class = "control-label" })
-                @Html.TextAreaFor(m => m.Notes 14, 20, new { @class = "form-control" } )
+                @Html.TextAreaFor(m => m.Notes, 14, 20, new { @class = "form-control" } )
             </div>
 
         </div>
